# Unix_Ind

./: CMakeLists.txt  README.md  main.c
my_commands/: additional_funcs.c  my_cd.c  my_exit.c  my_free.c  my_functions.h  my_if.c  my_ls.c  my_mkdir.c  my_ps.c  my_pwd.c  my_rm.c  my_rmdir.c  my_tail.c  replace_env.c
